# ChangeLog for dev-libs/openssl
# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.577 2014/08/07 18:12:48 jer Exp $

*openssl-1.0.2h-r2 (04 Jul 2016)

  04 Jul 2016; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +files/openssl-1.0.2h-CVE-2016-2177.patch,
  +files/openssl-1.0.2h-CVE-2016-2178.patch, +openssl-1.0.2h-r2.ebuild,
  -openssl-1.0.2g-r2.ebuild, metadata.xml:
  dev-libs/openssl: Update to 1.0.2h.

*openssl-1.0.2g-r2 (01 Apr 2016)

  01 Apr 2016; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +files/openssl-1.0.2g-parallel-build.patch, +openssl-1.0.2g-r2.ebuild,
  -files/openssl-1.0.2e-parallel-build.patch, -openssl-1.0.2e.ebuild,
  metadata.xml:
  dev-libs/openssl: Update patch to 1.0.2g.

*openssl-1.0.2e (06 Jan 2016)

  06 Jan 2016; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +files/gentoo.config-1.0.2, +files/openssl-1.0.2e-parallel-build.patch,
  +openssl-1.0.2e.ebuild, -files/gentoo.config-1.0.1,
  -files/openssl-1.0.2d-parallel-build.patch, -openssl-1.0.2d.ebuild:
  dev-libs/openssl: Update to OpenSSL 1.0.2e.

*openssl-1.0.2d (13 Jul 2015)

  13 Jul 2015; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +files/openssl-1.0.1p-default-source.patch,
  +files/openssl-1.0.2a-parallel-install-dirs.patch,
  +files/openssl-1.0.2a-parallel-obj-headers.patch,
  +files/openssl-1.0.2a-parallel-symlinking.patch,
  +files/openssl-1.0.2d-parallel-build.patch, +openssl-1.0.2d.ebuild,
  -files/openssl-1.0.2-s_client-verify.patch,
  -files/openssl-1.0.2a-malloc-typo.patch,
  -files/openssl-1.0.2a-parallel-build.patch, -openssl-1.0.2a.ebuild:
  Bump OpenSSL build to 1.0.2d.

*openssl-1.0.2a (27 Mar 2015)

  27 Mar 2015; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +files/openssl-1.0.2-no_des.patch, +files/openssl-1.0.2a-malloc-typo.patch,
  +files/openssl-1.0.2a-parallel-build.patch,
  +files/openssl-1.0.2a-x32-asm.patch, +openssl-1.0.2a.ebuild,