@@ -17,13 +17,13 @@ AUX openssl-1.0.2g-parallel-build.patch 9751 SHA256 a2ac3d132f77f6eaca8beabde454
 AUX openssl-1.0.2h-CVE-2016-2177.patch 8135 SHA256 e321860623758c8a98b15dfa0b4671244e2cff34b5c62a489c43437d1053ed06 SHA512 6e149213d1c4cbab06e0aedeb04562f96c1430e6e8f9b9836ff4ddd79da361db2bcfbdf83f6615369e8feaaefecfc0dc5f9cee3b56c2eeeca57233a2daf25d2c WHIRLPOOL 31ccd2931172dc4ae6052009c964e0fb063492775c87aacf94a2fe8397f198845a5bb352cd257126d85b37058ae26a86cec8b333a6d8528a941a5ff62125dc88
 AUX openssl-1.0.2h-CVE-2016-2178.patch 1111 SHA256 a418cadb3858c285c080d6c333cb03604e53aef164838ea31324b26a0e136013 SHA512 3225fff5f3e3bfff3a0acd6c294c5b3a6ce58184b6583aec7bf1e1b35cc590f59b25dfc44eda698f95e8c18553a51d36f26e4dc9af2b9a6d601ccd5d95fa9ea4 WHIRLPOOL 9b6e66f7c13d0e417176776bb49939d0e21218a5b6c3ddb2ca73e3a51b2aed4f01d9330e63ae5173ad137c475451fda0db4acd063797810a4a7e1bd9d07092aa
 DIST openssl-1.0.2h.tar.gz 5274412 SHA256 1d4007e53aad94a5b2002fe045ee7bb0b3d98f1a47f8b2bc851dcd1c74332919 SHA512 780601f6f3f32f42b6d7bbc4c593db39a3575f9db80294a10a68b2b0bb79448d9bd529ca700b9977354cbdfc65887c76af0aa7b90d3ee421f74ab53e6f15c303 WHIRLPOOL 41b6cf0c08b547f1432dc8167a4c7835da0b6907f8932969e0a352fab8bdbb4d8f612a5bf431e415d93ff1c8238652b2ee3ce0bd935cc2f59e8ea4f40fe6b5d6
-EBUILD openssl-1.0.2h-r2.ebuild 8387 SHA256 cf4862e8c16a88890356d0d22149ca7b593c52dd1a512447bd57f6c359aaf582 SHA512 fcf5e9da0ddeb9605f7f6ef87caeb3502d55c9a8343521cd49c6cef7a6ef08c65a1b2436ae7819d7b5d3f9a428154c8df9463c0d5e846a8bd88d18a6daaaaf7a WHIRLPOOL f89180f0a4a76e6451eb839c00b2472857a7a838047a19deb75c3fd6020c2e422c1b4498d5b866baaaefd7b10febbf7406f97ba4e0b6010f20ad2cff9981c386
-MISC ChangeLog 91094 SHA256 5d1304dc9e1e9abd00344af9b15cf4000fc5f95a5613a1ca47e85c8c7980c5c4 SHA512 b8caa5887d2cf36a1302691434451faf4a3a149c326831735b34cfaf773fc1d4caa9c479d30121d893150ad4bef82dc5daca4885505fa54724e9ee7fd515e5c8 WHIRLPOOL f31037beb177e751a0f735d74bdefc2a9c883ce19a328184672a3451ddbb5d6a42a9b8c9c71d6a478b555ae508503e0c715cfc8251973026ba42eb6844f8f6f7
-MISC metadata.xml 1744 SHA256 b041addf0758a4def47abdbb7a2544e635dced341c45cb9cf64d0f0f74fe4f4a SHA512 87261caf6b64ac99554af97c56e8a01867f592e56b78c8fa53e627ed5ad135d159dd783a6fe27ee62926d15677bfd1ab777e2e148403ea53baf0ef715b86d98e WHIRLPOOL 4aab31f3231ea1e83633f06b5d0505f39d0f9087c2f0bd9dc5c9ff9d6c6f4f778ca2d9000fe72671f58c434b105f7a3ceb14390a1f698f93f621ff5bbd71c15e
+EBUILD openssl-1.0.2h-r2.ebuild 8937 SHA256 2e442d95361dd494827f72eaa87e5da4de50fc866b5e47777134682d54356f5c SHA512 93d68b929b320c5117470b6be2f73b350ed1ae6e1cc46125f1926327c923318902350b671647837a878c58f52fd4a3b339aefd529cdc5127e72cf3baf40f740e WHIRLPOOL 627922cb057e9d8502714d7992ad05e76093c3593e19e866fad81da339d77ec4f1a5d97f118f4a021f5ddd5c0b9f968bb12d5f930aba51620fe30daca906c54d
+MISC ChangeLog 91269 SHA256 906ee07c2b141566922c10feb2092d295850e4f485a30f2f07102597cc111188 SHA512 4aeeeba568d21b5b688350916acdd85d7884dbebf811251a5279a015b3a38e1cb8494008c4b77fb981952eb0ccdaae0b93eb8ef661e004ec6f4bcfb25b9d624c WHIRLPOOL 8cb7eed1601841228e7602dcccdb903495708ed5cb51922b362dd09ef642d38f3bc08b58093949e3b024fc5164d0ad148b051835804ee2dfcfd60751ec44b5b7
+MISC metadata.xml 2000 SHA256 2ed10e7d1b130fc5a02d8509927aa6c66d954d08bf3f2bbc13fa69f0f89c06b6 SHA512 1fc344eca9098c25689e35475f571f83fa9bb2115b75dd6f0e33ae1f1bb792819094daadd1d21008320b584687abcb8ff03bfdf4c32ff396c26d8282108e7bb7 WHIRLPOOL 5e8230b94f2d68698ce819e3807993fc713b8816d094412a36440eb2fba281ec0fb8915dde5d535e9fa12a4ca67a5505368f2acf769e32b99c4501ed4d093928
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EARYIAAYFAld6rKMACgkQz9oPmzWWQiJnWgEAki9+TCT1PxpMFiWmUxOCL7pP
-CQ2tkUzRGC/Ij2nU2vgA/1Yh+vGTpNZRZlxH1NTeqZ5SGcPK8xjiI07pM0/iHUwB
-=xNV/
+iF4EARYIAAYFAld9JxwACgkQz9oPmzWWQiK02wEA66zVONmBbzbQ7VmkDT3YdnWu
+mJ8vpOcO582bc4B3Jl8A+wQ7MEePeR90bw+zt6vnzNSTTgtB0FZZLpCYCo6IygsD
+=Gj4T
 -----END PGP SIGNATURE-----
