@@ -2,6 +2,10 @@
 # Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.577 2014/08/07 18:12:48 jer Exp $
 
+  06 Jul 2016; Andrew John Hughes <gnu_andrew@member.fsf.org> metadata.xml,
+  openssl-1.0.2h-r2.ebuild:
+  dev-libs/openssl: Add privacy USE flag to enable stronger defaults.
+
 *openssl-1.0.2h-r2 (04 Jul 2016)
 
   04 Jul 2016; Andrew John Hughes <gnu_andrew@member.fsf.org>
